syntax = "proto3";

package executor;
import "verification/verification.proto";

service Executor{
    rpc ExecuteOrder (OrderRequest) returns (verification.VerificationRequest);
}

message OrderRequest{
}


